--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.10.0' # 设置 nodejs 的版本
-          
+
       - name: Install pnpm
         run: npm install -g pnpm # 全局安装 pnpm
 
@@ -33,6 +33,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.PAT_TOKEN }} # 这一步很重要，单独看下面的大步骤，主要是用来给该脚本一些仓库权限
-          publish_dir: .vitepress/dist # 指定该文件夹中的 dist 
+          publish_dir: .vitepress/dist # 指定该文件夹中的 dist
           publish_branch: gh-pages # 推送到关联仓库的 gh-pages 分支
-          dotfiles: true  # 包括在提交中，即使被 .gitignore 文件忽略
+          cname: smp.lukezhang.win # 添加CNAME文件
+          keep_files: true  # 保留已有文件
